# The-Glow-Game-Engine

./: .gitignore  README.md
android/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/res/: light_fragment_shader.txt  light_vertex_shader.txt  properties.xml  weapon_properties.xml
android/app/src/main/jni/: Android.mk
desktop/: CMakeLists.txt
source/: actor_factory.cpp  game_gui_manager.cpp  game_logic.cpp  gui.cpp  gui.h  level_loader.cpp  level_loader.h  light_manager.cpp  light_manager.h  light_manager_factory.cpp  main.cpp  performance_profiler.cpp  performance_profiler.h  render_system.cpp  render_system.h  shadow_light_manager.cpp  simple_light_manager.cpp  sound_manager.h
source/components/: contact_deletion_component.h  sound_component.cpp  spawner_component.cpp  timed_deletion_component.h  weapon_component.cpp  weapon_component.h  world.h
source/variant/: variant_event.h
